# kinetic_notation

./: .gitignore  .space.kts  CMakeLists.txt  Doxyfile  LICENSE  README.md  kinetic.kn
flex-bison/: scanner.l  specification.y
include/: ir_token_info.h  key_type.h  kinetic_notation.h  lib.h  object_list.h  token_info.h
include/kinetic_notation/: definition.h  error.h  result.h  structure.h  types.h
src/: api_internal.h  definition.c  definition.h  error.c  error.h  hashmap.h  ir_token_info.c  key_value_pair.h  kinetic_notation.c  parser.c  parser.h  scanner.c  scanner.h  string_split.c  string_split.h  structure.c  structure.h  token_info.c
src/hashmap/: bucket.c  bucket.h  hashmap.c
test/: CMakeLists.txt  compilation_test.cpp  expected_inputs_give_correct_outputs.c  get_key_returns_not_found_when_key_not_present.c  kinetic_notation_test.c  parser_test.cpp  test_asserts.h  test_structure.h
